Bug 27541 - Stanford: replace blue color with red: merged --squash from feature_eegorov_27541-stanford-red-color

--- a/skins/weborder_mobile/css/header.css
+++ b/skins/weborder_mobile/css/header.css
@@ -27,11 +27,15 @@
     min-width: 3.2em;
 }
 
+#header .main {
+    width: 100%;
+    height: 100%;
+}
+
 #header .one_button.profile .leftBtn {
     width: auto;
     margin-left: 1.5em;
 }
-
 
 .leftBtn, .rightBtn {
     display: none;
